<resources>
    <string name="app_name">LinkupHome</string>
    <string name="welcome_language">Language</string>
    <string name="welcome_beauty">Enjoy</string>
    <string name="welcome_occurrence">From this moment</string>
    <string name="welcome_language_select">Select Language</string>
    <string name="product_manual">Product Manual</string>
    <string name="center_title">Information Centre</string>
    <string name="mesh_tab_control">Control</string>
    <string name="mesh_tab_device_select">Select Group</string>
    <string name="mesh_tab_group_setting">Create Groups</string>
    <string name="mesh_tab_device_connect">Device Connect</string>
    <string name="menu_rename">Rename</string>
    <string name="menu_timer">Timer</string>
    <string name="menu_control_share">Share Control</string>
    <string name="menu_scan">Scan</string>
    <string name="scan_get_data">Waiting for scan QR Code...</string>
    <string name="scan_qrCode">My QR Code</string>
    <string name="scan_auto">Auto-scan by putting the QR Code in frame</string>
    <string name="scene_mode">Scene Mode</string>
    <string name="scene_read">Read Mode</string>
    <string name="scene_sunset">Sunset Mode</string>
    <string name="scene_rest">Rest Mode</string>
    <string name="scene_spring">Spring Blossoms Mode</string>
    <string name="scene_rainforest">Selva Mode</string>
    <string name="scene_lighting">Lighting Mode</string>
    <string name="scene_flow">Flowing</string>
    <string name="scene_seek">Chasing</string>
    <string name="scene_surf">Waving</string>
    <string name="scene_rainbow">Rainbow</string>
    <string name="scene_star">Starry</string>
    <string name="speed_slow">Slow Speed</string>
    <string name="speed_normal">Normal Speed</string>
    <string name="speed_fast">Fast Speed</string>
    <string name="timer_open_time">Light Turn On Time</string>
    <string name="timer_close_time">Light Turn Off Time</string>
    <string name="timer_loop">Repeat</string>
    <string name="share_tips">Share the control with your family or friends</string>
    <string name="share_tip_download_app">Download the APP</string>
    <string name="share_tip_open_app">Open the APP and scan QR Code</string>
    <string name="share_tip_success">Successfully Shared</string>
    <string name="share_qrCode">QR Code</string>
    <string name="share_qrCode_generating">Generating control-sharing QR Code...</string>
    <string name="share_qrCode_generate_success">Control-sharing QR Code is generated, pls scan</string>
    <string name="share_qrCode_generate_fail">Generate QR Code failed</string>
    <string name="share_qrCode_regenerate">Regenerate QR Code</string>
    <string name="share_img_save">Save the Picture</string>
    <string name="share_img_save_success">Picture Saved</string>
    <string name="share_img_save_fail">Saving Error</string>
    <string name="group_setting_drag">Push "Add" Button to Add</string>
    <string name="group_setting_exceed_number">The number of packets exceeded</string>
    <string name="device_search">Search Device</string>
    <string name="device_associating">Connecting...</string>
    <string name="device_clear">Reset all groups?</string>
    <string name="device_associate_fail">The connection fails. Please restart the device to connect.</string>
    <string name="device_connect_step2_title">Tips</string>
    <string name="device_connect_step2_hint">If the device is not found within 10 seconds, please try to reset the device</string>
    <string name="device_reset_hint2">Please use the switch to operate:\n1. Switch off the light\n2. Switch on the light, then switch off the light after 1-2 seconds.\n3. Switch on the light again, then switch off the light after 1-2 seconds.\n4. Switch light on the third time, when the light flash 3 times, it means the device is reset to defaults.\n\n（If no light flash 3 times, please repeat above steps until reset successfully.Turning on and off the light can\'t be too fast, it takes 1-2 seconds. )</string>
    <string name="device_reset_hint1">This step suitable for there is no new device appear in the "Device connect" page after reset. If the new device auto pops up, please ignore this step.\n\nIf no new device appear in the "Device connect" page, pls left slide to delete the invalid connection, the reset light can be displayed, then click to connection.</string>
    <string name="device_reset_tip">Please try following two shortcuts firstly:</string>
    <string name="device_reset_hint0">Way 1: Turn off bluetooth, then turn on it again. \nWay 2: Exit the app completely from the background system, then restart the app.</string>
    <string name="device_reset_hint3">If you\'re still unable to find devices after trying two shortcuts, follow the steps below to reset your device.</string>
    <string name="import_error">QR code does not match</string>
    <string name="network_error">Network connection failed,please check the network settings.</string>
    <string name="edit">Edit</string>
    <string name="group">Group</string>
    <string name="initialize">Reset Groups</string>
    <string name="removing">Removing...</string>
    <string name="add_product">Add Product</string>
    <string name="added">Added</string>
    <string name="add">Add</string>
    <string name="adding">Adding...</string>
    <string name="lamp_bed">智能床头灯</string>
    <string name="lamp_rgb">RGB Bulb</string>
    <string name="lamp_outdoor">Outdoor Lamp</string>
    <string name="lamp_mini_outdoor">Mini Outdoor Lamp</string>
    <string name="lamp_cct">CCT Bulb</string>
    <string name="lamp_led_strip">Strip Light</string>
    <string name="privacy_tip">Please confirm that you have read and agreed to</string>
    <string name="license_agreement">The End user License Agreement</string>
    <string name="privacy_statement">The Privacy Statement</string>
    <string name="privacy_start">start</string>
    <string name="zones_title">Home</string>
    <string name="devices_title">Device</string>
    <string name="how_to_reset_device">How to reset</string>
    <string name="how_to_reset_device_step1">Step 1</string>
    <string name="how_to_reset_device_step2">Step 2</string>
    <string name="how_to_reset_process">Reset Steps</string>
    <string name="setting_title">Settings</string>
</resources>