<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.ihomey.linkuphome.widget.CompatToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F7F7F7"
            app:layout_collapseMode="pin">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:src="@drawable/ic_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:ellipsize="end"
                android:maxEms="9"
                android:singleLine="true"
                android:text="@string/how_to_reset_device"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_18ssp" />
        </com.ihomey.linkuphome.widget.CompatToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/_30sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/device_reset_tip"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:lineSpacingMultiplier="1.3"
                android:text="@string/device_reset_hint0"
                android:textColor="#807F85"
                android:textSize="@dimen/_14ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_36sdp"
                android:layout_marginBottom="@dimen/_24sdp"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/device_reset_hint3"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="@dimen/_15ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_btn_reset_device_step1"
                android:paddingLeft="@dimen/_32sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingRight="@dimen/_32sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:text="@string/how_to_reset_device_step1"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_16ssp" />

            <ImageView
                android:id="@+id/iv_device_reset_guide2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:src="@mipmap/ic_device_reset_guide2" />

            <TextView
                android:id="@+id/iv_device_reset_step"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="-12dp"
                android:gravity="left"
                android:text="@string/how_to_reset_process"
                android:textColor="#807F85"
                android:textSize="@dimen/_15ssp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"

                android:lineSpacingExtra="@dimen/_8sdp"
                android:text="@string/device_reset_hint2"
                android:textColor="#807F85"
                android:textSize="@dimen/_15ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_42sdp"
                android:background="@drawable/bg_btn_reset_device_step1"
                android:paddingLeft="@dimen/_32sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingRight="@dimen/_32sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:text="@string/how_to_reset_device_step2"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_16ssp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/device_reset_hint1"
                android:textColor="#807F85"
                android:textSize="@dimen/_15ssp" />

            <ImageView
                android:id="@+id/iv_device_reset_guide1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24sdp"
                android:src="@mipmap/ic_device_reset_guide1_de" />

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

