<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="handlers"
            type="com.ihomey.linkuphome.device.DeviceResetFragment.EventHandler" />
    </data>


    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.ihomey.linkuphome.widget.CompatToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                app:layout_collapseMode="pin">

                <ImageButton
                    android:id="@+id/toolbar_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:background="@mipmap/arrow_icon_left"
                    android:onClick="@{handlers::onClick}" />

                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:ellipsize="end"
                    android:maxEms="9"
                    android:singleLine="true"
                    android:text="@string/how_to_reset_device"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />
            </com.ihomey.linkuphome.widget.CompatToolbar>
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="24dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/device_reset_tip"
                    android:textStyle="bold"
                    android:layout_gravity="left"
                    android:textColor="@color/text_colorPrimary"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:layout_marginTop="8dp"
                    android:lineSpacingExtra="8dp"
                    android:text="@string/device_reset_hint0"
                    android:textColor="@color/text_colorPrimary"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/device_reset_btn_step_bg"
                    android:paddingBottom="8dp"
                    android:paddingLeft="27dp"
                    android:paddingRight="27dp"
                    android:paddingTop="8dp"
                    android:text="@string/how_to_reset_device_step1"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/iv_device_reset_guide2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:src="@mipmap/ic_device_reset_guide2" />

                <TextView
                    android:id="@+id/iv_device_reset_step"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginTop="-12dp"
                    android:textColor="@color/text_colorPrimary"
                    android:gravity="left"
                    android:text="@string/how_to_reset_process"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:layout_marginTop="8dp"
                    android:lineSpacingExtra="8dp"
                    android:text="@string/device_reset_hint2"
                    android:textColor="@color/text_colorPrimary"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/device_reset_btn_step_bg"
                    android:gravity="center"
                    android:paddingBottom="8dp"
                    android:paddingLeft="27dp"
                    android:paddingRight="27dp"
                    android:paddingTop="8dp"
                    android:text="@string/how_to_reset_device_step2"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/device_reset_hint1"
                    android:textColor="@color/text_colorPrimary"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/iv_device_reset_guide1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:src="@mipmap/ic_device_reset_guide1_de" />

            </LinearLayout>


        </android.support.v4.widget.NestedScrollView>

    </android.support.design.widget.CoordinatorLayout>


</layout>
